k8s/express-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-server
  template:
    metadata:
      labels:
        app: express-server
    spec:
      containers:
        - name: express-server
          image: paribeshn/probo-http
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: express-server
spec:
  selector:
    app: express-server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: NodePort # Allows external access
