k8s/ws-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-server
  template:
    metadata:
      labels:
        app: ws-server
    spec:
      containers:
        - name: ws-server
          image: paribeshn/probo-ws
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: ws-server
spec:
  selector:
    app: ws-server
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP # Internal only
